# youcom-mcp-workshop-kit

./: .gitignore  README.md  pyproject.toml
examples/: claude_desktop_config.example.json  cursor_mcp.example.json
src/mcp_workshop_kit/: __init__.py  cli.py  configs.py
tests/: test_configs.py
workshop/: 01_grounded_agent_lab.md  02_content_api_lab.md  03_research_agent_lab.md
