[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youcom-mcp-workshop-kit"
version = "0.1.0"
description = "Workshop kit and config generator for You.com MCP demos"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Raymond Lee" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
mcp-workshop-config = "mcp_workshop_kit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
